# saia

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  spl578-plan.md  tsconfig.json
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/src/cache/: ownershipCache.ts
backend/src/data/: seedAgents.ts
backend/src/middleware/: authGate.ts  nfaGate.ts  rateLimiter.ts
backend/src/routes/: agents.ts  auth.ts  chat.ts
backend/src/services/: agentRouter.ts  db.ts  metaplex.ts  sessionLogger.ts  solana.ts
backend/src/types/: index.ts
docs/plans/: 2026-03-03-devnet-deployment-design.md  2026-03-03-devnet-deployment.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/city/: CyberpunkEnvironment.tsx  CyberpunkScene.tsx  Hotspots.tsx  ProceduralBuildings.tsx
frontend/src/components/layout/: AppLayout.tsx  Navbar.tsx
frontend/src/data/: agents.ts
frontend/src/hooks/: useAgents.ts  useAuth.ts  useChat.ts
frontend/src/pages/: AgentDetail.tsx  Agents.tsx  Chat.tsx  Index.tsx  IssueId.tsx  Registry.tsx  Reputation.tsx
frontend/src/services/: api.ts
programs/assistant_agent_578/: Cargo.toml
programs/assistant_agent_578/src/: errors.rs  lib.rs  state.rs
programs/oracle_agent_578/: Cargo.toml
programs/oracle_agent_578/src/: errors.rs  lib.rs  state.rs
programs/spl578/: Cargo.toml
programs/spl578/src/: cpi_helpers.rs  errors.rs  events.rs  lib.rs  state.rs
programs/spl578/src/instructions/: admin.rs  evolve.rs  execute_action.rs  initialize_registry.rs  launch_agent.rs  mod.rs  retire_agent.rs  set_backend_uri.rs  upgrade_logic.rs
programs/trading_agent_578/: Cargo.toml
programs/trading_agent_578/src/: errors.rs  lib.rs  state.rs
scripts/: 01_deploy_programs.sh  02_initialize_registry.ts  02_initialize_registry_raw.ts  03_create_demo_agents.ts  03_create_demo_agents_raw.ts  04_verify_on_explorer.ts  05_seed_oracle_prices.ts
sdk/: package.json  tsconfig.json
sdk/src/: constants.ts  index.ts  pda.ts  types.ts  utils.ts
tests/: assistant_agent.ts  helpers.ts  integration.ts  oracle_agent.ts  spl578.ts  trading_agent.ts
(+4 files in other folders)
