[package]
name = "oracle-agent-578"
version = "0.1.0"
description = "Oracle Agent for SPL-578"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "oracle_agent_578"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
init-if-needed = ["anchor-lang/init-if-needed"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
solana-program = { workspace = true }
