[package]
name = "spl578"
version = "0.1.0"
description = "SPL-578 Non-Fungible Agent (NFA) Launchpad"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl578"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
mpl-core = { workspace = true }
